Bug 660653: increased the width of back/next divs to minimize layout problems

--- a/media/css/base-mobile.css
+++ b/media/css/base-mobile.css
@@ -21,8 +21,15 @@ html, body {
 }
 
 .page-nav div.left, .page-nav div.middle, .page-nav div.right {
-    width:33.33%;
     float:left;
+}
+
+.page-nav div.left, .page-nav div.right {
+    width:42.5%;
+}
+
+.page-nav div.middle {
+    width:15%;
 }
 
 .page-nav div.middle {
